# crown-kv

./: .gitignore  CMakeLists.txt  README.md  agents.md
proto/: replication.proto
setup/: .env.example  README.md  build_only.bash  client_hosts.csv  generate_kv_dataset.py  kill.bash  plot_throughput.py  prod_hosts.csv  setup.bash  start_metadata.bash  start_server.bash  vm_setup.bash
setup/generated_kv_dataset/: all_kv_pairs.csv
src/client/: client.cpp  throughput_window.h
src/kv_store/: kv_store.cpp  kv_store.h
src/metadata_store/: metadata_store.cpp
src/node/: node.h
src/proto/: replication.grpc.pb.cc  replication.grpc.pb.h  replication.pb.cc  replication.pb.h
src/replication/: replication.h
src/replication/chain/: chain_replication.cpp  chain_replication.h
src/replication/common/: replication_common.cpp  replication_common.h
src/replication/craq/: craq_replication.cpp  craq_replication.h
src/replication/crown/: crown_replication.cpp  crown_replication.h
src/server/: server.cpp
tests/: protocol_tests.cpp  unit_tests.cpp
